--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,13 +13,15 @@ keywords = ["cryptocurrency", "tron", "ethereum", "bitcoin"]
 
 [dependencies]
 clap = "^2.33"
-url = "2.1.1"
-reqwest = { version = "0.10", features = ["json"] }
-tokio = { version = "0.2", features = ["full"] }
-chrono = "0.4.11"
+url = "2.5.4"
+reqwest = { version = "0.12.9", features = ["json"] }
+tokio = { version = "1.42.0", features = ["full"] }
+chrono = "0.4.39"
 serde_json = "1.0"
 serde_derive = "1.0"
-serde = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+log = "0.4.17"
+env_logger = "0.11.5"
 
 [[bin]]
 name = "tron"
